fix live event button width on mobile

--- a/site/styles/_cta-buttons.scss
+++ b/site/styles/_cta-buttons.scss
@@ -149,6 +149,7 @@
   .s72-btn-can-be-watched {
     min-width: 140px;
     padding: 6px 12px;
+    width: 100%;
 
     .padder {
       display: none;
